--- a/WPF Windows/Pridėti_Prekę.xaml
+++ b/WPF Windows/Pridėti_Prekę.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Administravimas.WPF_Windows.Prideti_Darbuotoja"
+﻿<Window x:Class="Administravimas.WPF_Windows.Prideti_preke"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Administravimas.WPF_Windows"
-        mc:Ignorable="d"
+        mc:Ignorable="d"     
         WindowStartupLocation="CenterScreen"
-        Title="Naujas Darbuotojas" Height="200" Width="500"
+        Title="Pridėti prekę" Height="220" Width="800"
         ResizeMode="NoResize" Background="LightGray">
     <Window.Resources>
         <Style TargetType="Button">
@@ -23,27 +23,37 @@
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
     </Window.Resources>
-
     <Border Padding="10">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0">
-                <Label Content="Tabelio numeris " Margin="20 10 20 0"  />
-                <TextBox IsReadOnly="True" TextChanged="EnableButton" Name="tabelis" Height="25" Margin="10 10 10 10"/>
+                <Label Content="Prekės ID " Margin="10 10 10 0"  />
+                <TextBox IsReadOnly="True" TextChanged="EnableButton" Name="pid" Height="25" Margin="10 10 10 10"/>
             </StackPanel>
             <StackPanel Grid.Column="1">
-                <Label Content="Darbuotojo Vardas ir Pavardė " Margin="50 10 50 0" />
-                <TextBox TextChanged="EnableButton" Name="vardas" Height="25" Margin="10 10 10 10"/>
+                <Label Content="Prekės pavadinimas " Margin="120 10 120 0" />
+                <TextBox TextChanged="EnableButton" Name="pavadinimas" Height="25" Margin="10 10 10 10"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Name="Cancel" Content="Atšaukti" Height="25" Width="100" Margin="0 20 -40 10" Click="Cancel_Click"/>
-                    <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Įtraukti" Height="25" Width="100" Margin="0 20 20 10" Click="Itraukti_Click"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Column="2">
+                <Label Content="Prekės kaina " Margin="50 10 50 0" />
+                <TextBox TextChanged="EnableButton" Name="kaina" Height="25" Margin="10 10 10 10"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Name="Cancel" Content="Atšaukti" Height="25" Width="100" Margin="47,40,47,-10" Click="Cancel_Click" Grid.ColumnSpan="2"/>
+                    <Button IsEnabled="False" Grid.Column="0" Name="Add" Content="Įtraukti" Height="25" Width="100" Margin="47,10,47,20" Click="Add_Click" Grid.ColumnSpan="2"/>
                 </Grid>
             </StackPanel>
         </Grid>
