--- a/WPF Windows/Formuoti_Ataskaita.xaml
+++ b/WPF Windows/Formuoti_Ataskaita.xaml
@@ -19,8 +19,11 @@
             <Setter Property="FontSize" Value="12"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
+        <Style TargetType="Menu">
+            <Setter Property="FontSize" Value="10"/>
+        </Style>
     </Window.Resources>
-    <Border Padding="10">
+    <Border Padding="10 10 10 10">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
@@ -34,6 +37,9 @@
             </StackPanel>
             <Button Grid.Column="1" Name="formuoti" Content="Formuoti" Height="35" Margin="10,0,10,50" Click="Formuoti_Click" IsEnabled="False"/>
             <Button Grid.Column="1" Name="cancel" Content="Atšaukti" Height="35" Margin="10,0,10,-50" Click="Cancel_Click"/>
+            <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-10,0,0" VerticalAlignment="Top" Width="48">
+                <MenuItem Header="Pagalba" Width="48" Click="MenuItem_Click"/>
+            </Menu>
         </Grid>
     </Border>
 </Window>
