--- a/WPF Windows/MainWindow.xaml
+++ b/WPF Windows/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Administravimas"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Administravimas" Height="500" Width="900" 
+        Title="Administravimas" Height="510" Width="900" 
         ResizeMode="CanMinimize"   Background="LightGray">
     <Window.Resources>
         <Style TargetType="Button">
@@ -14,11 +14,14 @@
             <Setter Property="BorderThickness" Value="0.5"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="FontStyle" Value="Normal"/>
-        </Style>        
+        </Style>
+        <Style TargetType="Menu">
+            <Setter Property="FontSize" Value="10"/>
+        </Style>
     </Window.Resources>
 
     <!-- Atitraukia kraštines nuo programos kraštų-->
-    <Border Padding="10">
+    <Border Padding="10 20 10 10">
 
         <!-- Programos laukas dalinamas į dvi dalis ir dedami elementai -->
         <Grid >
@@ -56,6 +59,9 @@
                 <Button Height="25" Margin="10 10 10 10 " Click="Pasalinti_Click">Pašalinti</Button>
                 <Button Height="25" Margin="10 10 10 10 " Click="Baigti_Click">Baigti</Button>
             </StackPanel>
+            <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-20,0,0" VerticalAlignment="Top" Width="48">
+                <MenuItem Header="Pagalba" Width="48" Click="MenuItem_Click"/>
+            </Menu>
         </Grid>
     </Border>
 </Window>
