--- a/WPF Windows/Prideti_Darbuotoja.xaml
+++ b/WPF Windows/Prideti_Darbuotoja.xaml
@@ -22,6 +22,9 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
+        <Style TargetType="Menu">
+            <Setter Property="FontSize" Value="10"/>
+        </Style>
     </Window.Resources>
 
     <Border Padding="10">
@@ -46,6 +49,9 @@
                     <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Įtraukti" Height="25" Width="100" Margin="0 20 20 10" Click="Itraukti_Click"/>
                 </Grid>
             </StackPanel>
+            <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-10,0,0" VerticalAlignment="Top" Width="48">
+                <MenuItem Header="Pagalba" Width="48" Click="MenuItem_Click"/>
+            </Menu>
         </Grid>
     </Border>
 </Window>
