--- a/WPF Windows/Prideti_Klienta.xaml
+++ b/WPF Windows/Prideti_Klienta.xaml
@@ -22,8 +22,9 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
         </Style>
-               
-
+        <Style TargetType="Menu">
+            <Setter Property="FontSize" Value="10"/>
+        </Style>      
     </Window.Resources>
     <Border Padding="10">
         <Grid>
@@ -56,6 +57,9 @@
                 <TextBox TextChanged="EnableButton" Name="TelNr_text" Height="25" Margin="10 10 10 10"/>
                 <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Įtraukti" Height="25" Width="100" Margin="0 20 10 10" Click="Itraukti_Click"/>
             </StackPanel>
+            <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-10,0,0" VerticalAlignment="Top" Width="48">
+                <MenuItem Header="Pagalba" Width="48" Click="MenuItem_Click"/>
+            </Menu>
         </Grid>
     </Border>
 </Window>
