--- a/WPF Windows/Prideti_Darbuotoja.xaml
+++ b/WPF Windows/Prideti_Darbuotoja.xaml
@@ -46,7 +46,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" Name="Cancel" Content="Atšaukti" Height="25" Width="100" Margin="0 20 -40 10" Click="Cancel_Click"/>
-                    <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Įtraukti" Height="25" Width="100" Margin="0 20 20 10" Click="Itraukti_Click"/>
+                    <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Pridėti" Height="25" Width="100" Margin="0 20 20 10" Click="Itraukti_Click"/>
                 </Grid>
             </StackPanel>
             <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-10,0,0" VerticalAlignment="Top" Width="48">
