--- a/WPF Windows/Prideti_Klienta.xaml
+++ b/WPF Windows/Prideti_Klienta.xaml
@@ -50,12 +50,12 @@
             <StackPanel Grid.Column="3">
                 <Label Content="Kodas" Width="50" Margin="10 10 10 0" />
                 <TextBox TextChanged="EnableButton" Name="Kodas_text" Height="25" Margin="10 10 10 10"/>
-                <Button Grid.Column="0" Name="Cancel" Content="Atšaukti" Height="25" Width="100" Margin="0 20 10 10" Click="Cancel_Click"/>
+                <Button Grid.Column="0" Name="Cancel" Content="Atšaukti" Height="25" Width="100" Margin="30 20 0 10" Click="Cancel_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="4">
                 <Label Content="Tel. Nr" Width="55" Margin="10 10 10 0" />
                 <TextBox TextChanged="EnableButton" Name="TelNr_text" Height="25" Margin="10 10 10 10"/>
-                <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Įtraukti" Height="25" Width="100" Margin="0 20 10 10" Click="Itraukti_Click"/>
+                <Button IsEnabled="False" Grid.Column="1" Name="Itraukti" Content="Pridėti" Height="25" Width="100" Margin="0 20 30 10" Click="Itraukti_Click"/>
             </StackPanel>
             <Menu HorizontalAlignment="Left" Height="15.2" Margin="-10,-10,0,0" VerticalAlignment="Top" Width="48">
                 <MenuItem Header="Pagalba" Width="48" Click="MenuItem_Click"/>
